Parser/YetAnotherGrammar/yagParser.js
// Generated from java-escape by ANTLR 4.11.1
// jshint ignore: start
import antlr4 from 'antlr4';
import yagListener from './yagListener.js';


const atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

const decisionsToDFA = atn.decisionToState.map( (ds, index) => new antlr4.dfa.DFA(ds, index) );

const sharedContextCache = new antlr4.PredictionContextCache();

export default class yagParser extends antlr4.Parser {

    static grammarFileName = "java-escape";
    static literalNames = [ null, "'~'", "'<<'", "'>>'", "'for'", "'do'", 
                            "'while'", "'break'", "'continue'", "'switch'", 
                            "'case'", "'default'", "'const'", "'if'", "'else'", 
                            "'return'", "'int'", "'bool'", "'void'", "'chan'", 
                            "'broadcast'", "'struct'", "'typedef'", "'('", 
                            "')'", "'{'", "'}'", "'['", "']'", "';'", "','", 
                            "'.'", "'!'", "'-'", "'>'", "'<'", "'?'", "':'", 
                            "'=='", "'<='", "'>='", "'!='", "'++'", "'--'", 
                            "'+'", "'*'", "'/'", "'&'", "'|'", "'^'", "'%'", 
                            "'&&'", "'||'", "'='", "'+='", "'-='", "'*='", 
                            "'/='", "'&='", "'|='", "'^='", "'%='", "'<<='", 
                            "'>>='" ];
    static symbolicNames = [ null, null, null, null, "FOR", "DO", "WHILE", 
                             "BREAK", "CONTINUE", "SWITCH", "CASE", "DEFAULT", 
                             "CONST", "IF", "ELSE", "RETURN", "INT", "BOOL", 
                             "VOID", "CHAN", "BCAST", "STRUCT", "TYPEDEF", 
                             "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                             "RBRACK", "SEMI", "COMMA", "DOT", "BANG", "SUB", 
                             "GT", "LT", "QUESTION", "COLON", "EQUAL", "LE", 
                             "GE", "NOTEQUAL", "INC", "DEC", "ADD", "MUL", 
                             "DIV", "BITAND", "BITOR", "CARET", "MOD", "AND", 
                             "OR", "ASSIGN", "ADD_ASSIGN", "SUB_ASSIGN", 
                             "MUL_ASSIGN", "DIV_ASSIGN", "AND_ASSIGN", "OR_ASSIGN", 
                             "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", 
                             "RSHIFT_ASSIGN", "INTEGER", "BOOLEAN", "ID", 
                             "WHITESPACE", "BLOCK_COMMENT", "LINE_COMMENT" ];
    static ruleNames = [ "file", "translation", "select_label", "select_pair", 
                         "assignment_label", "fcall", "synchronisation_label", 
                         "dnf", "conjuction", "literal", "vdec_list", "vdec", 
                         "arr_size", "fdec", "fparam_list", "fparam", "block", 
                         "statement", "assignment_stmt", "case_block", "expr_list", 
                         "expr", "var_identifier", "vtype", "bound_range", 
                         "assignmentOp" ];

    constructor(input) {
        super(input);
        this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
        this.ruleNames = yagParser.ruleNames;
        this.literalNames = yagParser.literalNames;
        this.symbolicNames = yagParser.symbolicNames;
    }

    get atn() {
        return atn;
    }

    sempred(localctx, ruleIndex, predIndex) {
    	switch(ruleIndex) {
    	case 9:
    	    		return this.literal_sempred(localctx, predIndex);
    	case 21:
    	    		return this.expr_sempred(localctx, predIndex);
        default:
            throw "No predicate with index:" + ruleIndex;
       }
    }

    literal_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 0:
    			return this.precpred(this._ctx, 9);
    		case 1:
    			return this.precpred(this._ctx, 8);
    		case 2:
    			return this.precpred(this._ctx, 5);
    		case 3:
    			return this.precpred(this._ctx, 4);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };

    expr_sempred(localctx, predIndex) {
    	switch(predIndex) {
    		case 4:
    			return this.precpred(this._ctx, 17);
    		case 5:
    			return this.precpred(this._ctx, 16);
    		case 6:
    			return this.precpred(this._ctx, 15);
    		case 7:
    			return this.precpred(this._ctx, 14);
    		case 8:
    			return this.precpred(this._ctx, 13);
    		case 9:
    			return this.precpred(this._ctx, 12);
    		case 10:
    			return this.precpred(this._ctx, 11);
    		case 11:
    			return this.precpred(this._ctx, 10);
    		case 12:
    			return this.precpred(this._ctx, 9);
    		case 13:
    			return this.precpred(this._ctx, 8);
    		case 14:
    			return this.precpred(this._ctx, 7);
    		case 15:
    			return this.precpred(this._ctx, 22);
    		case 16:
    			return this.precpred(this._ctx, 20);
    		default:
    			throw "No predicate with index:" + predIndex;
    	}
    };




	file() {
	    let localctx = new FileContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 0, yagParser.RULE_file);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 52;
	        this.translation();
	        this.state = 53;
	        this.match(yagParser.EOF);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	translation() {
	    let localctx = new TranslationContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 2, yagParser.RULE_translation);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 57; 
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        do {
	            this.state = 57;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,0,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 55;
	                this.vdec_list();
	                break;

	            case 2:
	                this.state = 56;
	                this.fdec();
	                break;

	            }
	            this.state = 59; 
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & 1773568) !== 0));
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	select_label() {
	    let localctx = new Select_labelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 4, yagParser.RULE_select_label);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 61;
	        this.select_pair();
	        this.state = 66;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30) {
	            this.state = 62;
	            this.match(yagParser.COMMA);
	            this.state = 63;
	            this.select_pair();
	            this.state = 68;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	select_pair() {
	    let localctx = new Select_pairContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 6, yagParser.RULE_select_pair);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 69;
	        localctx.vid = this.var_identifier();
	        this.state = 70;
	        this.match(yagParser.COLON);
	        this.state = 71;
	        localctx.range = this.vtype();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	assignment_label() {
	    let localctx = new Assignment_labelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 8, yagParser.RULE_assignment_label);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 75;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,3,this._ctx);
	        switch(la_) {
	        case 1:
	            this.state = 73;
	            this.assignment_stmt();
	            break;

	        case 2:
	            this.state = 74;
	            this.fcall();
	            break;

	        }
	        this.state = 84;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30) {
	            this.state = 77;
	            this.match(yagParser.COMMA);
	            this.state = 80;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,4,this._ctx);
	            switch(la_) {
	            case 1:
	                this.state = 78;
	                this.assignment_stmt();
	                break;

	            case 2:
	                this.state = 79;
	                this.fcall();
	                break;

	            }
	            this.state = 86;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fcall() {
	    let localctx = new FcallContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 10, yagParser.RULE_fcall);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 87;
	        localctx.fid = this.match(yagParser.ID);
	        this.state = 88;
	        this.match(yagParser.LPAREN);
	        this.state = 90;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 41943042) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & 7171) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & 7) !== 0)) {
	            this.state = 89;
	            localctx.fargs = this.expr_list();
	        }

	        this.state = 92;
	        this.match(yagParser.RPAREN);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	synchronisation_label() {
	    let localctx = new Synchronisation_labelContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 12, yagParser.RULE_synchronisation_label);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 94;
	        localctx.chan = this.expr(0);
	        this.state = 95;
	        localctx.symb = this._input.LT(1);
	        _la = this._input.LA(1);
	        if(!(_la===32 || _la===36)) {
	            localctx.symb = this._errHandler.recoverInline(this);
	        }
	        else {
	        	this._errHandler.reportMatch(this);
	            this.consume();
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	dnf() {
	    let localctx = new DnfContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 14, yagParser.RULE_dnf);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 97;
	        this.conjuction();
	        this.state = 102;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===52) {
	            this.state = 98;
	            this.match(yagParser.OR);
	            this.state = 99;
	            this.conjuction();
	            this.state = 104;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	conjuction() {
	    let localctx = new ConjuctionContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 16, yagParser.RULE_conjuction);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 105;
	        this.literal(0);
	        this.state = 110;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===51) {
	            this.state = 106;
	            this.match(yagParser.AND);
	            this.state = 107;
	            this.literal(0);
	            this.state = 112;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}


	literal(_p) {
		if(_p===undefined) {
		    _p = 0;
		}
	    const _parentctx = this._ctx;
	    const _parentState = this.state;
	    let localctx = new LiteralContext(this, this._ctx, _parentState);
	    let _prevctx = localctx;
	    const _startState = 18;
	    this.enterRecursionRule(localctx, 18, yagParser.RULE_literal, _p);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 126;
	        this._errHandler.sync(this);
	        switch(this._input.LA(1)) {
	        case 32:
	            this.state = 114;
	            this.match(yagParser.BANG);
	            this.state = 115;
	            this.literal(7);
	            break;
	        case 23:
	            this.state = 116;
	            this.match(yagParser.LPAREN);
	            this.state = 117;
	            this.literal(0);
	            this.state = 118;
	            this.match(yagParser.RPAREN);
	            break;
	        case 66:
	            this.state = 120;
	            this.var_identifier();
	            this.state = 122;
	            this._errHandler.sync(this);
	            var la_ = this._interp.adaptivePredict(this._input,9,this._ctx);
	            if(la_===1) {
	                this.state = 121;
	                this.arr_size();

	            }
	            break;
	        case 64:
	            this.state = 124;
	            this.match(yagParser.INTEGER);
	            break;
	        case 65:
	            this.state = 125;
	            this.match(yagParser.BOOLEAN);
	            break;
	        default:
	            throw new antlr4.error.NoViableAltException(this);
	        }
	        this._ctx.stop = this._input.LT(-1);
	        this.state = 142;
	        this._errHandler.sync(this);
	        var _alt = this._interp.adaptivePredict(this._input,12,this._ctx)
	        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
	            if(_alt===1) {
	                if(this._parseListeners!==null) {
	                    this.triggerExitRuleEvent();
	                }
	                _prevctx = localctx;
	                this.state = 140;
	                this._errHandler.sync(this);
	                var la_ = this._interp.adaptivePredict(this._input,11,this._ctx);
	                switch(la_) {
	                case 1:
	                    localctx = new LiteralContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, yagParser.RULE_literal);
	                    this.state = 128;
	                    if (!( this.precpred(this._ctx, 9))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 9)");
	                    }
	                    this.state = 129;
	                    this.match(yagParser.EQUAL);
	                    this.state = 130;
	                    this.literal(10);
	                    break;

	                case 2:
	                    localctx = new LiteralContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, yagParser.RULE_literal);
	                    this.state = 131;
	                    if (!( this.precpred(this._ctx, 8))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 8)");
	                    }
	                    this.state = 132;
	                    this.match(yagParser.NOTEQUAL);
	                    this.state = 133;
	                    this.literal(9);
	                    break;

	                case 3:
	                    localctx = new LiteralContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, yagParser.RULE_literal);
	                    this.state = 134;
	                    if (!( this.precpred(this._ctx, 5))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 5)");
	                    }
	                    this.state = 135;
	                    _la = this._input.LA(1);
	                    if(!(((((_la - 45)) & ~0x1f) == 0 && ((1 << (_la - 45)) & 35) !== 0))) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 136;
	                    this.literal(6);
	                    break;

	                case 4:
	                    localctx = new LiteralContext(this, _parentctx, _parentState);
	                    this.pushNewRecursionContext(localctx, _startState, yagParser.RULE_literal);
	                    this.state = 137;
	                    if (!( this.precpred(this._ctx, 4))) {
	                        throw new antlr4.error.FailedPredicateException(this, "this.precpred(this._ctx, 4)");
	                    }
	                    this.state = 138;
	                    _la = this._input.LA(1);
	                    if(!(_la===33 || _la===44)) {
	                    this._errHandler.recoverInline(this);
	                    }
	                    else {
	                    	this._errHandler.reportMatch(this);
	                        this.consume();
	                    }
	                    this.state = 139;
	                    this.literal(5);
	                    break;

	                } 
	            }
	            this.state = 144;
	            this._errHandler.sync(this);
	            _alt = this._interp.adaptivePredict(this._input,12,this._ctx);
	        }

	    } catch( error) {
	        if(error instanceof antlr4.error.RecognitionException) {
		        localctx.exception = error;
		        this._errHandler.reportError(this, error);
		        this._errHandler.recover(this, error);
		    } else {
		    	throw error;
		    }
	    } finally {
	        this.unrollRecursionContexts(_parentctx)
	    }
	    return localctx;
	}



	vdec_list() {
	    let localctx = new Vdec_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 20, yagParser.RULE_vdec_list);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 145;
	        localctx.type = this.vtype();
	        this.state = 146;
	        this.vdec();
	        this.state = 151;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30) {
	            this.state = 147;
	            this.match(yagParser.COMMA);
	            this.state = 148;
	            this.vdec();
	            this.state = 153;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 154;
	        this.match(yagParser.SEMI);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	vdec() {
	    let localctx = new VdecContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 22, yagParser.RULE_vdec);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 156;
	        localctx.vid = this.var_identifier();
	        this.state = 158;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===27) {
	            this.state = 157;
	            localctx.dim = this.arr_size();
	        }

	        this.state = 162;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===53) {
	            this.state = 160;
	            this.match(yagParser.ASSIGN);
	            this.state = 161;
	            localctx.init = this.expr(0);
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	arr_size() {
	    let localctx = new Arr_sizeContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 24, yagParser.RULE_arr_size);
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 168; 
	        this._errHandler.sync(this);
	        var _alt = 1;
	        do {
	        	switch (_alt) {
	        	case 1:
	        		this.state = 164;
	        		this.match(yagParser.LBRACK);
	        		this.state = 165;
	        		this.expr(0);
	        		this.state = 166;
	        		this.match(yagParser.RBRACK);
	        		break;
	        	default:
	        		throw new antlr4.error.NoViableAltException(this);
	        	}
	        	this.state = 170; 
	        	this._errHandler.sync(this);
	        	_alt = this._interp.adaptivePredict(this._input,16, this._ctx);
	        } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fdec() {
	    let localctx = new FdecContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 26, yagParser.RULE_fdec);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 172;
	        localctx.ret = this.vtype();
	        this.state = 173;
	        localctx.fid = this.match(yagParser.ID);
	        this.state = 174;
	        this.match(yagParser.LPAREN);
	        this.state = 176;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if((((_la) & ~0x1f) == 0 && ((1 << _la) & 1773568) !== 0)) {
	            this.state = 175;
	            localctx.params = this.fparam_list();
	        }

	        this.state = 178;
	        this.match(yagParser.RPAREN);
	        this.state = 179;
	        localctx.bl = this.block();
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fparam_list() {
	    let localctx = new Fparam_listContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 28, yagParser.RULE_fparam_list);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 181;
	        this.fparam();
	        this.state = 186;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while(_la===30) {
	            this.state = 182;
	            this.match(yagParser.COMMA);
	            this.state = 183;
	            this.fparam();
	            this.state = 188;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	fparam() {
	    let localctx = new FparamContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 30, yagParser.RULE_fparam);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 189;
	        this.vtype();
	        this.state = 190;
	        localctx.pid = this.var_identifier();
	        this.state = 192;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        if(_la===27) {
	            this.state = 191;
	            this.arr_size();
	        }

	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	block() {
	    let localctx = new BlockContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 32, yagParser.RULE_block);
	    var _la = 0; // Token type
	    try {
	        this.enterOuterAlt(localctx, 1);
	        this.state = 194;
	        this.match(yagParser.LBRACE);
	        this.state = 198;
	        this._errHandler.sync(this);
	        _la = this._input.LA(1);
	        while((((_la) & ~0x1f) == 0 && ((1 << _la) & 43758194) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & 7171) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & 7) !== 0)) {
	            this.state = 195;
	            this.statement();
	            this.state = 200;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	        }
	        this.state = 201;
	        this.match(yagParser.RBRACE);
	    } catch (re) {
	    	if(re instanceof antlr4.error.RecognitionException) {
		        localctx.exception = re;
		        this._errHandler.reportError(this, re);
		        this._errHandler.recover(this, re);
		    } else {
		    	throw re;
		    }
	    } finally {
	        this.exitRule();
	    }
	    return localctx;
	}



	statement() {
	    let localctx = new StatementContext(this, this._ctx, this.state);
	    this.enterRule(localctx, 34, yagParser.RULE_statement);
	    var _la = 0; // Token type
	    try {
	        this.state = 265;
	        this._errHandler.sync(this);
	        var la_ = this._interp.adaptivePredict(this._input,28,this._ctx);
	        switch(la_) {
	        case 1:
	            this.enterOuterAlt(localctx, 1);
	            this.state = 203;
	            this.block();
	            break;

	        case 2:
	            this.enterOuterAlt(localctx, 2);
	            this.state = 204;
	            this.vdec_list();
	            break;

	        case 3:
	            this.enterOuterAlt(localctx, 3);
	            this.state = 205;
	            this.match(yagParser.FOR);
	            this.state = 206;
	            this.match(yagParser.LPAREN);
	            this.state = 210;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            while((((_la) & ~0x1f) == 0 && ((1 << _la) & 41943042) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & 7171) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & 7) !== 0)) {
	                this.state = 207;
	                this.assignment_stmt();
	                this.state = 212;
	                this._errHandler.sync(this);
	                _la = this._input.LA(1);
	            }
	            this.state = 213;
	            this.match(yagParser.SEMI);
	            this.state = 215;
	            this._errHandler.sync(this);
	            _la = this._input.LA(1);
	            if((((_la) & ~0x1f) == 0 && ((1 << _la) & 41943042) !== 0) || ((((_la - 32)) & ~0x1f) == 0 && ((1 << (_la - 32)) & 7171) !== 0) || ((((_la - 64)) & ~0x1f) == 0 && ((1 << (_la - 64)) & 7) !== 0)) {
	                this.state = 214;
	                this.expr_list();
	            }
